--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ waitress==2.1.2
 torch==2.2.0
 torchvision==0.17.0
 torchaudio==2.2.0
+transformers==5.0.0
+sentence-transformers==2.2.2
+joblib==1.3.2
+
+
