--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,9 @@ torchaudio==2.2.0
 transformers==4.57.1
 sentence-transformers==2.2.2
 joblib==1.3.2
+sentence-transformers==2.2.2
+huggingface-hub==0.25.2
+
 
 
 
