--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,24 @@
+Instructs pip to use the PyTorch repository for CPU-only packages
+
 --extra-index-url https://download.pytorch.org/whl/cpu
+
+Flask and Web Server
+
 Flask==2.3.3
 Flask-CORS==4.0.0
 waitress==2.1.2
 gunicorn
+
+Environment and Utilities
+
 python-dotenv
 requests==2.31.0
 colorama==0.4.6
 python-dateutil==2.8.2
 joblib==1.3.2
+
+Data Science and Finance
+
 pandas==2.1.0
 numpy==1.26.4
 scikit-learn==1.3.0
@@ -15,6 +26,12 @@ matplotlib==3.7.2
 seaborn==0.12.2
 yfinance==0.2.37
 beautifulsoup4==4.12.2
+eodhd==1.1.3
+
+Machine Learning and NLP
+
+Specifies CPU-only versions to avoid GPU dependencies on Render
+
 torch==2.2.0+cpu
 torchvision==0.17.0+cpu
 torchaudio==2.2.0+cpu
@@ -22,6 +39,3 @@ transformers==4.44.2
 sentence-transformers==3.0.1
 huggingface-hub==0.24.6
 textblob==0.17.1
-eodhd==1.1.3
-
-
