--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,20 @@
-Instructs pip to use the PyTorch repository for CPU-only packages
-
+# Instructs pip to use the PyTorch repository for CPU-only packages
 --extra-index-url https://download.pytorch.org/whl/cpu
 
-Flask and Web Server
-
+# Flask and Web Server
 Flask==2.3.3
 Flask-CORS==4.0.0
 waitress==2.1.2
-gunicorn
+gunicorn==21.2.0
 
-Environment and Utilities
-
-python-dotenv
+# Environment and Utilities
+python-dotenv==1.0.0
 requests==2.31.0
 colorama==0.4.6
 python-dateutil==2.8.2
 joblib==1.3.2
 
-Data Science and Finance
-
+# Data Science and Finance
 pandas==2.1.0
 numpy==1.26.4
 scikit-learn==1.3.0
@@ -28,10 +24,7 @@ yfinance==0.2.37
 beautifulsoup4==4.12.2
 eodhd==1.1.3
 
-Machine Learning and NLP
-
-Specifies CPU-only versions to avoid GPU dependencies on Render
-
+# Machine Learning and NLP
 torch==2.2.0+cpu
 torchvision==0.17.0+cpu
 torchaudio==2.2.0+cpu
